--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -4007,16 +4007,16 @@
     "        - The variance of the results greatly increase above k=8 \n",
     "     - The 8 most useful features are: \n",
     "     \n",
-    "         | Feature | coefficient |\n",
-    "         | ------- | ----------- |\n",
-    "         | vertical_drop | 10.767857 |\n",
-    "         | Snow Making_ac | 6.290074 |\n",
-    "         | total_chairs | 5.794156 |\n",
-    "         | fastQuads | 5.745626 |\n",
-    "         | Runs | 5.370555 |\n",
-    "         | LongestRun_mi | 0.181814 |\n",
-    "         | trams | -4.142024 |\n",
-    "         | SkiableTerrain_ac | -5.249780 |\n",
+    "         | Feature           | coefficient |\n",
+    "         | ----------------- | ----------- |\n",
+    "         | vertical_drop     | 10.767857   |\n",
+    "         | Snow Making_ac    | 6.290074    |\n",
+    "         | total_chairs      | 5.794156    |\n",
+    "         | fastQuads         | 5.745626    |\n",
+    "         | Runs              | 5.370555    |\n",
+    "         | LongestRun_mi     | 0.181814    |\n",
+    "         | trams.            | -4.142024   |\n",
+    "         | SkiableTerrain_ac | -5.249780   |\n",
     "         \n",
     "     - vertical drop is the biggest positive feature, area covered by snow making equipment is a strong positive too. \n",
     "    - The skiable terrain area is negatively associated with ticket price, people will pay less for larger resorts. It could be an effect whereby larger resorts can host more visitors at any one time and so can charge less per ticket      \n",
@@ -4041,10 +4041,10 @@
     "\n",
     "- ***Model selection***: Linear regression vs Random forest\n",
     "\n",
-    "     | Model | Cross validation MAE | Std of cross validation MAE | MAE on test set | \n",
-    "     | ----- | -------------------- | --------------------------- | --------------- |\n",
-    "     | Linear regression  | 10.5 | 1.62 | 11.8 | \n",
-    "     |Random Forest | 9.65 | 1.35 | 9.53 | \n",
+    "     | Model             | Cross validation MAE | Std of cross validation MAE | MAE on test set | \n",
+    "     | ----------------- | -------------------- | --------------------------- | --------------- |\n",
+    "     | Linear regression | 10.5.                | 1.62.                       | 11.8.           | \n",
+    "     |Random Forest      | 9.65                 | 1.35                        | 9.53            | \n",
     "\n",
     "\n",
     "\n",
