Modified version by Sabra MAbrouk

--- a/Notebooks/04_preprocessing_and_training.ipynb
+++ b/Notebooks/04_preprocessing_and_training.ipynb
@@ -4006,6 +4006,7 @@
     "        - The curve first increases rapidly with k, then declines slowly  \n",
     "        - The variance of the results greatly increase above k=8 \n",
     "     - The 8 most useful features are: \n",
+    "\n",
     "     \n",
     "         | Feature           | coefficient |\n",
     "         | ----------------- | ----------- |\n",
@@ -4015,9 +4016,10 @@
     "         | fastQuads         | 5.745626    |\n",
     "         | Runs              | 5.370555    |\n",
     "         | LongestRun_mi     | 0.181814    |\n",
-    "         | trams.            | -4.142024   |\n",
+    "         | trams             | -4.142024   |\n",
     "         | SkiableTerrain_ac | -5.249780   |\n",
-    "         \n",
+    "\n",
+    "\n",
     "     - vertical drop is the biggest positive feature, area covered by snow making equipment is a strong positive too. \n",
     "    - The skiable terrain area is negatively associated with ticket price, people will pay less for larger resorts. It could be an effect whereby larger resorts can host more visitors at any one time and so can charge less per ticket      \n",
     "\n",
@@ -4035,18 +4037,17 @@
     "\n",
     "        - The best parameters are 69 for the number of trees, median for imputation of missing values and none for scaling. These parameters give a slightly better results than the previous ones (using the model with its default parameters),  the r squared is around 0.7 with a standard deviation of 0.06. \n",
     "\n",
-    "    - The barplot of the best random forest regressor feature importances shows that the dominant top four features are fastQuads, Runs, Snow Making_ac, vertical_drop, those features are in common with thelinear model\n",
+    "    - The barplot of the best random forest regressor feature importances shows that the dominant top four features are fastQuads, Runs, Snow Making_ac, vertical_drop, those features are in common with the linear model\n",
     "    \n",
     "<br>\n",
     "\n",
     "- ***Model selection***: Linear regression vs Random forest\n",
     "\n",
+    "\n",
     "     | Model             | Cross validation MAE | Std of cross validation MAE | MAE on test set | \n",
     "     | ----------------- | -------------------- | --------------------------- | --------------- |\n",
-    "     | Linear regression | 10.5.                | 1.62.                       | 11.8.           | \n",
-    "     |Random Forest      | 9.65                 | 1.35                        | 9.53            | \n",
-    "\n",
-    "\n",
+    "     | Linear regression | 10.5                 | 1.62                        | 11.8            | \n",
+    "     | Random Forest     | 9.65                 | 1.35                        | 9.53            | \n",
     "\n",
     "\n",
     "\n",
@@ -4056,15 +4057,6 @@
     "\n",
     "- ***Training set size***: the curve of the cross-validation score as a function of the size of the training set shows a rapid initial increase and has practically stabilized around a sample size of 40-50. \n",
     "\n",
-    "           \n",
-    "\n",
-    "                \n",
-    "\n",
-    "       \n",
-    "\n",
-    "               \n",
-    "\n",
-    "   \n",
     "     "
    ]
   }
